# beyvox

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  TODO.md  ТЗ_Голосовой_Мессенджер_v1.0.docx
.github/workflows/: docker.yml  release.yml
caddy/: Caddyfile.example  docker-compose.yml
client/: .env.example  README.md  index.html  package-lock.json  package.json
client/public/: rust-mic-worklet.js
client/src/: main.ts  router.ts  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capture-core/: CMakeLists.txt  capture_core.cpp  capture_core.h  dxgi_capture.cpp  dxgi_capture.h  gpu_converter.cpp  gpu_converter.h  test_main.cpp
client/src-tauri/src/: lib.rs
client/src-tauri/src/audio/: mod.rs
client/src-tauri/src/effects/: compressor.rs  eq.rs  gate.rs  mod.rs  rnnoise_effect.rs
client/src-tauri/src/screen/: mod.rs
client/src-tauri/src/voice/: mod.rs
client/src-tauri/src/vst/: mod.rs
client/src/api/: index.ts
client/src/components/chat/: ChannelHeader.vue  ChatArea.vue  ChatBreadcrumb.vue  ChatColumn.vue  MessageComposer.vue  MessageItem.vue  MessageList.vue
client/src/components/guild/: GuildSettingsModal.vue
client/src/components/layout/: ActivityFeed.vue  ActivityItem.vue  AppBrand.vue  ChannelSidebar.vue  GuildInfoCard.vue  GuildRow.vue  GuildSidebar.vue  GuildsColumn.vue  InfoColumn.vue  ServerCard.vue  ServerSidebar.vue  ServersColumn.vue  UserBar.vue
client/src/components/settings/: SettingsModal.vue
client/src/stores/: activity.ts  auth.ts  guild.ts  screen.ts  servers.ts  voice.ts  ws.ts
client/src/utils/: sounds.ts
client/src/views/: App.vue  Login.vue
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  livekit-keys.example.yaml  livekit.yaml.example
server/migrations/: 001_initial.sql  002_mentions_username.sql  003_guilds_default_admin.sql  004_screen_share.sql  005_extend_admin_schema.sql
server/src/: admin.rs  config.rs  error.rs  main.rs
server/src/api/: channel_overrides.rs  channels.rs  guilds.rs  members.rs  messages.rs  mod.rs  permissions.rs  roles.rs
server/src/auth/: middleware.rs  mod.rs
server/src/voice/: mod.rs
server/src/ws/: handler.rs  types.rs
site/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
site/frontend/: index.html  vite.config.ts
site/frontend/src/: App.vue  router.ts  style.css
site/frontend/src/api/: index.ts
site/frontend/src/stores/: auth.ts
site/frontend/src/views/: Auth.vue  Landing.vue  Servers.vue
site/migrations/: 001_initial.sql  002_email_verification.sql  003_username_unique_lower.sql  004_guild_snapshots.sql  005_servers_total_members.sql
site/src/: config.rs  error.rs  main.rs
site/src/auth/: handlers.rs  jwt.rs
site/src/catalog/: handlers.rs  mod.rs  puller.rs
site/static/: index.html
site/static/assets/: index-BPoTLrYs.css  index-CzDM6zI9.css  index-FzxYzRII.js  index-pJyQff2U.js
(+5 files in other folders)
