[package]
name = "beyvox-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWKS верификация JWT от центрального сервера
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rand = "0.8"

# WebSocket state management
dashmap = "6"
tokio-stream = "0.1"
futures-util = "0.3"
