[package]
name = "beyvox-central"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rand = "0.8"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
